add google analytics

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <meta name="description"
     content="Descubre Pokepalette: genera landing pages únicas con paletas de colores extraídas de Pokémon. Inspírate, diseña y crea en segundos con estilo y personalidad.">
   <title>Pokepalette</title>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FLVK4G3QGB"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-FLVK4G3QGB');
+  </script>
 </head>
 
 <body>
